--- a/productStyle.css
+++ b/productStyle.css
@@ -1,1 +1,42 @@
+body {
+    text-align: center;
+    background-color: seashell;
+}
+#nav-bar {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color:gray;
 
+}
+#nav-bar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    float: right;
+    width: 100px;
+    background-color: white;
+    text-decoration: none;
+}
+#nav-bar ul li{
+    display: block;
+    color: #000;
+    padding:8px 16px;
+    text-decoration: none;
+}
+#nav-bar ul li:hover {
+    background-color: gray;
+    color: white;
+}
+#nav-bar #header-img {
+    float:left;
+    height: 150px;
+    width: 150px;
+    {
+
+}
+
+#pricing table {
+    margin-left: auto;
+    margin-right: auto;
+}
